added credentials to submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "studynet/apps/globals/static/js/lib/fluorine"]
 	path = studynet/apps/globals/static/js/lib/fluorine
-	url = github.com:snowmantw/Fluorine.git
+	url = https://littleq0903:github1989@github.com:snowmantw/Fluorine.git
