--- a/extension/social-nccu/chrome/manifest.json
+++ b/extension/social-nccu/chrome/manifest.json
@@ -14,6 +14,12 @@
             "matches": ["http://www.nccu.edu.tw/*"],
             "js": ["lib/jquery-1.7.2.min.js", "social_plugins_home.js"],
             "run_at": "document_end"
+        },
+        {
+            "matches": ["http://wa.nccu.edu.tw/QryTor/*"],
+            "js": ["lib/jquery-1.7.2.min.js","lib/underscore-min.js", "social_plugins_course.js"],
+            "css": ["css/widget.css"],
+            "run_at": "document_end"
         }
     ],
 
