--- a/extension/social-nccu/chrome/manifest.json
+++ b/extension/social-nccu/chrome/manifest.json
@@ -23,6 +23,8 @@
         }
     ],
 
+    "permissions": [ "http://127.0.0.1:8090/" ],
+
     "icons": {
         "16": "icons/logo-16.png",
         "48": "icons/logo-48.png",
