--- a/extension/social-nccu/chrome/manifest.json
+++ b/extension/social-nccu/chrome/manifest.json
@@ -1,8 +1,8 @@
 {
-    "name": "Social NCCU",
-    "version": "1.5",
+    "name": "Social Study - NCCU",
+    "version": "2.0",
     "manifest_version": 2,
-    "description": "老是盯著呆板的政大首頁是否覺得無聊呢？來試試看新的「社交版NCCU」Google Chrome擴充套件，讓政大首頁邁入社交新紀元！",
+    "description": "老是盯著呆板的政大首頁是否覺得無聊呢？來試試看新的「Social Study - NCCU」Google Chrome擴充套件，讓政大首頁邁入社交新紀元！現在還有選課的 Social Study 快速連結喔！",
 
     "content_scripts": [
         {
@@ -23,7 +23,7 @@
         }
     ],
 
-    "permissions": [ "http://127.0.0.1:8090/", "http://nccu-study-net.herokuapp.com/" ],
+    "permissions": [ "http://127.0.0.1:8090/", "http://nccu-study-net.herokuapp.com/", "http://socialstudy.tw/" ],
 
     "icons": {
         "16": "icons/logo-16.png",
