--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
+#[submodule "studynet/apps/globals/static/js/lib/fluorine"]
+#	path = studynet/apps/globals/static/js/lib/fluorine
+#	url = https://github.com/snowmantw/Fluorine.git
 [submodule "studynet/apps/globals/static/js/lib/fluorine"]
 	path = studynet/apps/globals/static/js/lib/fluorine
-	url = https://github.com:snowmantw/Fluorine.git
+	url = https://github.com/snowmantw/Fluorine.git
