--- a/extension/social-nccu/chrome/manifest.json
+++ b/extension/social-nccu/chrome/manifest.json
@@ -33,6 +33,8 @@
 
     "web_accessible_resources": [
         "img/nccubanner-chrome.png",
-        "img/nccubanner-chrome-share.png"
+        "img/nccubanner-chrome-share.png",
+        "config/config.json",
+        "config/config.local.json"
     ]
 }
