--- a/extension/social-nccu/chrome/manifest.json
+++ b/extension/social-nccu/chrome/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Social Study - NCCU",
-    "version": "2.0",
+    "version": "2.1",
     "manifest_version": 2,
     "description": "老是盯著呆板的政大首頁是否覺得無聊呢？來試試看新的「Social Study - NCCU」Google Chrome擴充套件，讓政大首頁邁入社交新紀元！現在還有選課的 Social Study 快速連結喔！",
 
@@ -20,10 +20,20 @@
             "js": ["lib/jquery-1.7.2.min.js","lib/underscore-min.js", "social_plugins_course.js"],
             "css": ["css/widget.css"],
             "run_at": "document_end"
+        },
+        {
+            "matches": ["http://moltke.cc.nccu.edu.tw/sturesult_SSO/genAllScoreResult.jsp"],
+            "js": ["lib/jquery-1.7.2.min.js","lib/underscore-min.js", "social_plugins_score.js"],
+            "css": ["css/score_widget.css"],
+            "run_at": "document_end",
+            "all_frames": true
         }
     ],
 
-    "permissions": [ "http://127.0.0.1:8090/", "http://nccu-study-net.herokuapp.com/", "http://socialstudy.tw/" ],
+    "permissions": ["http://127.0.0.1:8090/",
+                    "http://nccu-study-net.herokuapp.com/",
+                    "http://socialstudy.tw/",
+                    "http://moltke.cc.nccu.edu.tw/sturesult_SSO/genAllScoreResult.jsp"],
 
     "icons": {
         "16": "icons/logo-16.png",
