--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ dj-database-url==0.2.1
 gunicorn==0.14.6
 psycopg2==2.4.5
 wsgiref==0.1.2
+
+# Make you have `coffee` and `lessc` commands.
+django_compressor
 simplejson
